# world-cup-2026-predictor

./: .gitignore  README.md  config.yaml  index.html  pyproject.toml  requirements.txt  vercel.json
api/: live.py
data/: build_seed_data.py  fetch_real_data.py
data/raw/: fixtures.csv  match_history.csv  odds_real.csv  odds_sample.csv  squads_template.csv  teams.csv  venues.csv
src/wcp/: __main__.py  pipeline.py
src/wcp/app/: cli.py  streamlit_app.py
src/wcp/features/: context.py  incentives.py  matchup.py  travel.py  venues.py
src/wcp/ingest/: base.py  dataset.py  fixtures.py  match_history.py  odds.py  rankings.py  squads.py
src/wcp/live/: advance_odds.py  bracket_tracker.py  clinch.py  compare.py  dashboard.py  feed.py  live_app.py  live_bracket.py  pool.py  rankings.py  rival_picks.py  schedule.py  tracker.py  user_picks.py
src/wcp/markets/: __init__.py  edge_tracker.py  r32_markets.py
src/wcp/model/: bayesian.py  bracket.py  calibration.py  ensemble.py  expected_goals.py  ml_xg.py  power_index.py  predictor.py  ratings.py  score_model.py  simulator.py  standings.py  team_strength.py  value_betting.py  weighting.py
src/wcp/reports/: generate_report.py  insights.py  match_table.py
src/wcp/utils/: config.py  geo.py  io.py  logging.py  odds_math.py  validation.py
tests/: test_bracket_mapping.py  test_clinch.py  test_edge_tracker.py  test_group_rules.py  test_live_views.py  test_odds_math.py  test_pool.py  test_power_index.py  test_score_model.py  test_simulator.py  test_third_place.py  test_value_betting.py
